Move Java dependency back to Java 8